Make sure the long URL is broken in the sidebar.

--- a/client/main.css
+++ b/client/main.css
@@ -73,6 +73,7 @@ p {
 .note-row-content {
     color: #878787;
     font-size: 14px;
+    overflow-wrap: break-word;
 }
 
 .note-book-top-bar {
